--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@modelcontextprotocol/sdk": "^1.16.0",
     "dotenv": "^17.2.0",
     "googleapis": "^153.0.0",
+    "luxon": "^3.7.1",
     "zod": "^3.25.76"
   }
 }
